--- a/CaseStudyModule4/create.html
+++ b/CaseStudyModule4/create.html
@@ -43,7 +43,7 @@
                     type: "POST",
                     data: JSON.stringify(user),
                     //tên API
-                    url: "http://localhost:8080/api/create",
+                    url: "http://localhost:8080/api/register",
                     //xử lý khi thành công
 
                     success: function (){
@@ -72,7 +72,7 @@
                         <form method="POST" class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="username"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="username" placeholder="Your Name"/>
+                                <input type="text" name="name" id="username" placeholder="User Name"/>
                             </div>
                             <div class="form-group">
                                 <label for="fullName"><i class="zmdi zmdi-account material-icons-name"></i></label>
