--- a/CaseStudyModule4/home.html
+++ b/CaseStudyModule4/home.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-user hello
+<div class="container">
+    <div class="row" id="menu"></div>
+    <div class="row" id="main"></div>
+</div>
 </body>
 </html>
